[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpdex" 
version = "0.1.0"
description = "Multi Perp DEX base class and exchange wrappers"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
  "aiohttp>=3.10",
  "pynacl>=1.5",
  "ccxt>=4.4",     # Backpack가 ccxt에 의존하므로 기본 포함 유지
  "eth-hash>=0.7",
]

[project.optional-dependencies]
# 각 거래소별 선택 설치(필요한 것만 골라 설치)
lighter = [
  # 배포명은 lighter-sdk, import 모듈은 'lighter'
  "lighter-sdk @ git+https://github.com/elliottech/lighter-python.git@d687f96012c166df5c6ab59188f28db8d7469d8f"
]
grvt = [
  "grvt-pysdk>=0.1.24"
]
# Backpack는 기본 dependencies(ccxt)로 충분한 경우가 많음. 별도 항목이 필요하면 여기 추가.
backpack = [
  "ccxt>=4.4"
]
# Cairo/ StarkNet 필요 시
starknet = [
  "cairo-lang==0.13.5"
]
# 개발 도구(선택)
dev = [
  "pytest>=8.3",
  "pip-tools>=7",
  "pipdeptree>=2.25",
]

[tool.setuptools]
# 설치 대상 패키지를 명시적으로 제한하여 keys/, test_exchanges/는 설치 제외
packages = ["mpdex", "wrappers"]
# 루트에 있는 단일 모듈도 함께 배포
py-modules = ["multi_perp_dex", "exchange_factory"]